export type Artist = {
  name: string
}