export type Track = {
  name: string;
}